made changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,9 @@
         <div class="center text-big bold">
             Hi! I am gopi, this is my first web app.
 	    <h4> A new Heading </h4>
-	    I have made some changes in this file
+	    I have new changes in this file
+	    changes no.2
+
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
