changes to get .js

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,9 @@
 	    changes no.2
 
         </div>
+	<script>
+	alert("Hi i'm JavaScript");
+	</script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
