--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id ='image' src="/ui/madi.png" class="img-medium"/>
+            <img id ='image' src="G:/personal/self_picture" class="img-medium"/>
         </div>
         <br>
         <div id="main-text" class="center text-big bold">
@@ -15,10 +15,7 @@
 	    changes no.2
 
         </div>
-	<script>
-	alert("Hi i'm JavaScript");
-	</script>
-        <script type="text/javascript" src="/ui/main.js">
+	    <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
