made some changes

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,27 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+	<div class="container">
         <div class="center">
-            <img id ='image' src="/ui/self_picture.jpg" class="img-medium"/>
+            <img id ='image' src="https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-9/12512273_797598477039705_2023856064057928340_n.jpg?oh=880fcd06ad7e754f1f0ae38c1e256fd0&oe=5873CEB9" class="img-medium"/>
         </div>
+	<hr/>
+	<h3>Personal</h3>
+	<div>
+	<p> This is gopi <p>
+	</div>
+	<hr/>
+	<h3>Proffessional information</h3>
+	<div>
+ 	<p> I am doing my M.Tech <p>
+	</div>
+	<hr/>
+	<div class ="footer">
+	This button <button id ="counter"> click me </button> displays the counter <span id ="count"> 0 </span>
+	</div>
         <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am gopi, this is my first web app.
-	    <h4> A new Heading </h4>
-	    I have new changes in this file
-	    changes no.2
-
         </div>
-	    <script type="text/javascript" src="/ui/main.js">
+	<script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
