[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,27 +4,35 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-	<div class="container">
-        <div class="center">
-            <img id ='image' src="https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-9/12512273_797598477039705_2023856064057928340_n.jpg?oh=880fcd06ad7e754f1f0ae38c1e256fd0&oe=5873CEB9" class="img-medium"/>
+    	<div class="container">
+            <div class="center">
+                <img id ='image' src="https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-9/12512273_797598477039705_2023856064057928340_n.jpg?oh=880fcd06ad7e754f1f0ae38c1e256fd0&oe=5873CEB9" class="img-medium"/>
+            </div>
+        	<hr/>
+        	<h3>Personal</h3>
+        	<div>
+        	    <p> This is gopi <p>
+        	</div>
+    	    <hr/>
+    	    <h3>Proffessional information</h3>
+        	<div>
+         	    <p> I am doing my M.Tech <p>
+        	</div>
+    	    <hr/>
+        	<div class ="footer">
+        	    This button <button id ="counter"> click me </button> displays the counter <span id ="count"> 0 </span>
+        	
+                <br>
+                <input type="text" id="name" placeholder="name"></input>
+                <input type="submit" value ="Submit"> </input>
+            <ul>
+                <li>name1<li>    
+                <li>name2<li>
+                <li>name3<li>
+            </div>
         </div>
-	<hr/>
-	<h3>Personal</h3>
-	<div>
-	<p> This is gopi <p>
-	</div>
-	<hr/>
-	<h3>Proffessional information</h3>
-	<div>
- 	<p> I am doing my M.Tech <p>
-	</div>
-	<hr/>
-	<div class ="footer">
-	This button <button id ="counter"> click me </button> displays the counter <span id ="count"> 0 </span>
-	</div>
-        <br>
-        </div>
-	<script type="text/javascript" src="/ui/main.js">
+        
+    	<script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
