--- a/ui/index.html
+++ b/ui/index.html
@@ -26,9 +26,10 @@
                 <input type="text" id="name" placeholder="name"></input>
                 <input type="submit" value ="Submit"> </input>
             <ul>
-                <li>name1<li>    
-                <li>name2<li>
-                <li>name3<li>
+                <li>name1</li>    
+                <li>name2</li>
+                <li>name3</li>
+            </ul>        
             </div>
         </div>
         
