--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,9 @@
     	    <h3> Login </h3>
         	<div>
          	    <input type = "text" id ="username" placeholder ="username" />
-        	</div>
+         	    <input type = "text" id ="password"/>
+         	    <input type ="submit" id ="submit_btn"/>
+         	</div>
     	    <hr/>
         </div>
         
